feat(tanti commit: Added p in navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 <body>
 <div class="container">
    <div class="navbar">
-
+<p>
+Free landing Pages
+</p>
+<p>
+Features
+</p>
+<p>
+    Services
+</p>
+<p>
+    Pricing
+</p>
+<p>
+    Contact
+</p>
    </div>
    <div class="textbox">
     
