feat(tanti commit): Added position of textbox

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ Features
     <p>
         create custom landing pages with Shades that convert more visitors than any website-no coding required.
     </p>
-    <input type="text">
-    <button>
+    <input type="text" placeholder="Enter your email">
+    <button class="sub">
         Subscribe
     </button>
    </div>
