feat(tanti commit): Added button color

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Features
     <h1>
         Make Landing page fast and easily
     </h1>
-    <p>
+    <p class="underh1">
         create custom landing pages with Shades that convert more visitors than any website-no coding required.
     </p>
     <input type="text" placeholder="Enter your email">
