feat(tanti commit): Added transparent button and fixed width

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Features
 <button class="btn">Get Started</button>
    </div>
    <div class="textbox">
-    <p>
+    <p class="uph1">
         Present your service
     </p>
     <h1>
