feat(tanti commit): Added size of input and orange button

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@ Features
    </div>
    <div class="textbox">
     <p class="uph1">
-        Present your service
+        PRESENT YOUR SERVICE
     </p>
     <h1>
         Make Landing page fast and easily
     </h1>
     <p class="underh1">
-        create custom landing pages with Shades that convert more visitors than any website-no coding required.
+        Create custom landing pages with Shades that convert more visitors than any website-no coding required.
     </p>
-    <input type="text" placeholder="Enter your email">
+    <input type="text" placeholder="Enter your email" class="inputMail">
     <button class="sub">
         Subscribe
     </button>
