--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@ Features
         PRESENT YOUR SERVICE
     </p>
     <h1>
-        Make Landing page fast and easily
+        Make landing page fast and easily
     </h1>
     <p class="underh1">
-        Create custom landing pages with Shades that convert more visitors than any website-no coding required.
+        Create custom landing pages with Shades
+        <br>
+        that convert more visitors than any website-no coding required.
     </p>
     <input type="text" placeholder="Enter your email" class="inputMail">
     <button class="sub">
